--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_verification_code: ^1.1.7
   pinput: ^5.0.2
   pin_code_fields: ^8.0.1
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
